--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -2,3 +2,14 @@
   margin: 0;
   padding: 0;
 }
+.appBar {
+  width: calc(100% - 240px) !important;
+  margin-left: 240px;
+}
+.admin-content {
+  flex-grow: 1;
+  padding: 1.2em;
+}
+.admin-body{
+  margin-top: 65px;
+}
