--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -10,20 +10,40 @@
   flex-grow: 1;
   padding: 1.2em;
 }
-.admin-body{
+.admin-body {
   margin-top: 65px;
 }
-a{
+a {
   text-decoration: none;
 }
-.card-img{
+.card-img {
   height: 140px;
 }
-.course-form{
+.course-form {
   display: flex;
   flex-direction: column;
 }
 
-.course-form > *{
+.course-form > * {
   margin-top: 2em !important;
+}
+
+.sortable {
+  min-width: 200px;
+  min-height: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 5px 0 0 0;
+  float: left;
+  margin-right: 10px;
+}
+.sortable > li {
+  margin: 0 5px 5px 5px;
+  padding: 8px 8px 8px 16px;
+  font-size: 1.2em;
+  width: 100%;
+  background: #fff;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  cursor: grabbing;
+  border-radius: 2px;
 }
