--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -47,3 +47,14 @@ a {
   cursor: grabbing;
   border-radius: 2px;
 }
+
+.modal{
+  min-width: 200px;
+  min-height: 100px;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
+  background: #fff;
+  padding: 16px;
+}
