--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -43,22 +43,40 @@ a {
   font-size: 1.2em;
   width: 100%;
   background: #fff;
-  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   cursor: grabbing;
   border-radius: 2px;
 }
 
-.modal{
+.modal {
   min-width: 200px;
   min-height: 100px;
-  top:50%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   position: absolute;
   background: #fff;
   padding: 16px;
 }
 
-.d-flex{
+.d-flex {
   display: flex;
+}
+
+.quiz-question-wrapper {
+  background: lightgray;
+  padding: 10px;
+}
+
+.quiz-question-editor {
+  min-height: 200px;
+}
+.create-quiz {
+  max-height: 700px;
+  overflow-y: scroll;
+}
+.create-quiz .label {
+  font-weight: bold;
+  color: red;
+  font-size: 1.1em;
 }
