--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -41,9 +41,9 @@ a {
   float: left;
   margin-right: 10px;
 }
-.sortable > li {
+
+.sortable > div {
   margin: 0 5px 5px 5px;
-  padding: 8px 8px 8px 16px;
   font-size: 1.2em;
   width: 100%;
   background: #fff;
