--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -138,7 +138,16 @@ a {
 
 .analysis-paper {
   padding: 15px;
-  margin: 11px;
-  width: fit-content;
+  margin: 8px;
   height: fit-content;
+}
+
+.analysis-page{
+  width: calc(100% - 200px) !important;
+}
+
+.analysis-page > div {
+  margin-bottom: 16px;
+  margin-top: 16px;
+  overflow-x: hidden;
 }
